Bug 256655 - A "save changes?" dialog appears ALWAYS when leaving composer settings, even when unchanged.
Summary: A "save changes?" dialog appears ALWAYS when leaving composer settings, even ...
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: config dialog (other bugs)
Version First Reported In: 2.0.89
Platform: Compiled Sources Linux
: NOR minor
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-11-12 06:50 UTC by Kamil Domański
Modified: 2011-10-25 11:11 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.7.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kamil Domański 2010-11-12 06:50:36 UTC
Version:           2.0.89 (using Devel) 
OS:                Linux

When leaving the "Composer" settings section, i get the following dialog:
"The settings of the current module have changed.
Do you want to apply the changes or discard them?"

The problem is, it appears even if no changes have been made. Other configuration sections do not bahave this way.

Reproducible: Always

Steps to Reproduce:
Click Settings->Configure Kmail
Click on "Composer" section. Now try to switch to any other section.

Actual Results:  
"The settings of the current module have changed.
Do you want to apply the changes or discard them?"

Expected Results:  
Should just switch to another section without a dialog.
Comment 1 Burkhard Lück 2011-06-08 14:16:10 UTC
Confirmed using kmail 2.0.97 compiled from sources
Comment 2 Laurent Montel 2011-07-06 20:37:08 UTC
I can't reproduce this bug.
Could you upgrade your kmail please.
Thanks
Comment 3 Burkhard Lück 2011-07-07 15:44:00 UTC
$ KDE_LANG=en_US kmail --version
Qt: 4.7.0
KDE Development Platform: 4.6.90 (4.7 RC1)
KMail: 2.1.96

Still reproducible for me
Comment 4 Laurent Montel 2011-07-07 16:00:04 UTC
could you try to find which tab create this message ?

I can't reproduce it.
Comment 5 Burkhard Lück 2011-07-07 16:17:08 UTC
(In reply to comment #4)
> could you try to find which tab create this message ?
> 
I can reproduce this behaviour for all tabs on the page Composer

> I can't reproduce it.

Strange, anyway thanks for caring about this issue.
Comment 6 Laurent Montel 2011-07-07 16:35:34 UTC
Perhaps a specific config makes it...
don't know for the moment...
Comment 7 Christophe Marin 2011-07-08 13:19:52 UTC
reproducible here with master. Browsing the different tabs is enough to see the save dialog

(open the settings, click on 'composer', click on another category, the dialog appears)
Comment 8 Christophe Marin 2011-07-08 13:23:12 UTC
If save is selected (despite nothing having been changed):

'external-editor=' is added in kmail2rc
Comment 9 Laurent Montel 2011-07-08 13:38:06 UTC
Ok thanks I can reproduce it when I activate external editor
Will fix it.
Comment 10 Laurent Montel 2011-10-25 11:10:10 UTC
Git commit b58dbd4ec100c44f83ecbb13a065237f423f02d1 by Montel Laurent.
Committed on 25/10/2011 at 13:09.
Pushed by mlaurent into branch 'master'.

fix #Bug 256655 - A "save changes?" dialog appears ALWAYS when leaving composer settings, even when unchanged.

FIXED-IN: 4.7.3
BUG: 256655

M  +2    -1    kmail/configuredialog.cpp

http://commits.kde.org/kdepim/b58dbd4ec100c44f83ecbb13a065237f423f02d1
Comment 11 Laurent Montel 2011-10-25 11:11:35 UTC
Git commit 7294d3a7dab91caecfc6b8c5c81f659b213b614b by Montel Laurent.
Committed on 25/10/2011 at 13:09.
Pushed by mlaurent into branch 'KDE/4.7'.

fix #Bug 256655 - A "save changes?" dialog appears ALWAYS when leaving composer settings, even when unchanged.

FIXED-IN: 4.7.3
BUG: 256655
(cherry picked from commit b58dbd4ec100c44f83ecbb13a065237f423f02d1)

Conflicts:

	kmail/configuredialog.cpp

M  +6    -5    kmail/configuredialog.cpp

http://commits.kde.org/kdepim/7294d3a7dab91caecfc6b8c5c81f659b213b614b