fix #Bug 256655 - A "save changes?" dialog appears ALWAYS when leaving composer settings, even when unchanged.

FIXED-IN: 4.7.3
BUG: 256655
(cherry picked from commit b58dbd4ec100c44f83ecbb13a065237f423f02d1)

Conflicts:

	kmail/configuredialog.cpp