kmail/configuredialog.cpp
@@ -2325,11 +2325,12 @@ ComposerPageGeneralTab::ComposerPageGeneralTab( QWidget * parent )
   label = new QLabel( GlobalSettings::self()->externalEditorItem()->label(),
                    hbox );
   mEditorRequester = new KUrlRequester( hbox );
-  mEditorRequester->setObjectName( "kcfg_ExternalEditor" );
-  connect( mEditorRequester, SIGNAL( urlSelected(const KUrl&) ),
-           this, SLOT( slotEmitChanged( void ) ) );
-  connect( mEditorRequester, SIGNAL( textChanged(const QString&) ),
-           this, SLOT( slotEmitChanged( void ) ) );
+  //Laurent 25/10/2011 fix #Bug 256655 - A "save changes?" dialog appears ALWAYS when leaving composer settings, even when unchanged.
+  //mEditorRequester->setObjectName( "kcfg_ExternalEditor" );
+  connect( mEditorRequester, SIGNAL(urlSelected(KUrl)),
+           this, SLOT(slotEmitChanged()) );
+  connect( mEditorRequester, SIGNAL(textChanged(QString)),
+           this, SLOT(slotEmitChanged()) );
 
   hbox->setStretchFactor( mEditorRequester, 1 );
   label->setBuddy( mEditorRequester );
